nenolod     2005/09/04 23:01:39 UTC	(20050904-2121)
  Log:
  Add a tools directory for developer tools/modules. I guess you would call this an SDK?
  

  Modified:
	trunk/tools/ (File Added) 


nenolod     2005/09/04 21:06:11 UTC	(20050904-2119)
  Log:
  Add version and vendor fields to the module header.
  

  Modified:
	trunk/include/module.h (File Modified) 


jilles      2005/09/04 17:24:58 UTC	(20050904-2115)
  Log:
  Give proper error message instead of coring on
  /msg chanserv flags <badname> target flags.
  

  Modified:
	trunk/modules/chanserv/flags.c (File Modified) 


nenolod     2005/09/04 08:37:42 UTC	(20050904-2113)
  Log:
  Add ACC command to nickserv/status, as implemented on DALnet.
  

  Modified:
	trunk/modules/nickserv/status.c (File Modified) 


beu         2005/09/04 07:15:47 UTC	(20050904-2111)
  Log:
  `make DESTDIR=/path/to/foo install` support.
  

  Modified:
	trunk/backend/Makefile.in (File Modified) 
	trunk/contrib/Makefile.in (File Modified) 
	trunk/crypto/Makefile.in (File Modified) 
	trunk/dbtool/Makefile.in (File Modified) 
	trunk/modules/Makefile.in (File Modified) 
	trunk/protocol/Makefile.in (File Modified) 
	trunk/src/Makefile.in (File Modified) 


nenolod     2005/09/04 06:05:51 UTC	(20050904-2107)
  Log:
  Make sure clean recurses subdirectories.
  

  Modified:
	trunk/modules/Makefile.in (File Modified) 


nenolod     2005/09/04 06:03:57 UTC	(20050904-2105)
  Log:
  gen_pw() goodness.
  

  Modified:
	trunk/modules/nickserv/register.c (File Modified) 
	trunk/modules/userserv/register.c (File Modified) 


nenolod     2005/09/04 05:59:17 UTC	(20050904-2103)
  Log:
  Add gen_pw() which generates a random string, intended for passwords and keys.
  

  Modified:
	trunk/include/extern.h (File Modified) 
	trunk/src/function.c (File Modified) 


pfish       2005/09/04 05:40:49 UTC	(20050904-2099)
  Log:
  propset
  

  Modified:
	trunk/modules/operserv/uptime.c  (Property Modified)

