@@ -4,12 +4,17 @@
  *
  * This file contains code for the CService FLAGS functions.
  *
- * $Id: flags.c 2115 2005-09-04 17:24:58Z jilles $
+ * $Id: flags.c 2125 2005-09-04 23:34:32Z nenolod $
  */
 
 #include "atheme.h"
 
-DECLARE_MODULE_V1("chanserv/flags", FALSE, _modinit, _moddeinit);
+DECLARE_MODULE_V1
+(
+	"chanserv/flags", FALSE, _modinit, _moddeinit
+	"$Id: flags.c 2125 2005-09-04 23:34:32Z nenolod $",
+	"Atheme Development Group <http://www.atheme.org>"
+);
 
 static void cs_cmd_flags(char *origin);
 static void cs_fcmd_flags(char *origin, char *channel);
